--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e767f3">  <td>23/02/03 11:45:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTitleTest()[pri:1, instance:com.crm.qa.tests.LoginPageTest@62150f9e]">loginPageTitleTest</td> 
-  <td>main@561959774</td>   <td></td> </tr>
-<tr bgcolor="e767f3">  <td>23/02/03 11:45:32</td>   <td>-6996</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.tests.LoginPageTest@62150f9e]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@561959774</td>   <td></td> </tr>
-<tr bgcolor="e767f3">  <td>23/02/03 11:45:40</td>   <td>1390</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.tests.LoginPageTest@62150f9e]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@561959774</td>   <td></td> </tr>
+<tr bgcolor="e9adcf">  <td>23/02/04 03:22:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTitleTest()[pri:1, instance:com.crm.qa.tests.LoginPageTest@6e20b53a]">loginPageTitleTest</td> 
+  <td>main@257513673</td>   <td></td> </tr>
+<tr bgcolor="e9adcf">  <td>23/02/04 03:22:38</td>   <td>-8913</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.tests.LoginPageTest@6e20b53a]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@257513673</td>   <td></td> </tr>
+<tr bgcolor="e9adcf">  <td>23/02/04 03:22:48</td>   <td>1163</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.tests.LoginPageTest@6e20b53a]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@257513673</td>   <td></td> </tr>
 </table>
